@@ -42,7 +42,7 @@ public class DanglingPageRankWithCombinerNepheleITCase extends RecordAPITestBase
 	@Override
 	protected JobGraph getJobGraph() throws Exception {
 		String[] parameters = new String[] {
-			new Integer(DOP).toString(),
+			Integer.valueOf(DOP).toString(),
 			pagesWithRankPath,
 			edgesPath,
 			resultPath,
